# fxlab

./: .coveragerc  .dockerignore  .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  AUDIT_TRAIL_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  GAP_ANALYSIS_PHASE3.md  Makefile  QUALITY_AUDIT_2026-03-28.txt  README-INSTALL.md  README.md  alembic.ini  build-release.sh  build.py  conftest.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fxlab_test.db  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ship.sh  uninstall.sh
.archive/: 20260319_155935_build.py.bak  20260319_155935_pyproject.toml.bak  20260319_155935_pytest.ini.bak  20260319_155935_services_api_main.py.bak  20260319_162457_services_api_main.py.bak  20260319_163755_routes_promotions.py.bak  20260319_163755_routes_runs.py.bak  20260319_172505_services_api_main_s6.py.bak  20260319_172534_tests_test_api_s6.py.bak  20260319_172814_services_api_main_s7_pre.py.bak  20260319_174845_docker-compose.yml.bak  20260319_174845_services_api_main_m1s4.py.bak  20260319_175257_services_api_main_s6refactor.py.bak  20260327T122809_tests_conftest.py.bak  20260327T122918_tests_integration_conftest.py.bak  20260327T123612_routes_artifacts.py.bak  20260327T123654_services_api_main.py.bak  20260328_0001_initial_schema.py_20260328_122928.bak  FXLab_Phase_3_frontend_distilled_ARCHIVED_2026-03-28T120000Z.md  alembic.ini_20260328_125706.bak  approvals_v2.py_20260328_125831.bak  artifacts.py.20260327T093042.bak  artifacts.py_ARCHIVED_20260328T155925Z.py  audit.py.20260319T180330.bak  audit.py_ARCHIVED_20260328T160000Z.py  charts.py.stub.20260327T111657  charts.py_ARCHIVED_20260328T155940Z.py  data_certification.py_ARCHIVED_20260328T155951Z.py  feed.py.20260327T094110.bak  feed_health.py_ARCHIVED_20260328T155936Z.py  feed_health_route.py.20260327T094110.bak  feeds.py_ARCHIVED_20260328T155932Z.py  feeds_route.py.20260327T094110.bak  governance_ARCHIVED_20260328T154528Z.py  main.py.20260319T182214.bak  main.py.20260327T094110.bak  main.py_20260328_125431.bak  minio_storage.py.20260327T093042.bak  models.py_20260328_122546.bak  observability.py_ARCHIVED_20260328T160010Z.py  (+11 more)
.github/workflows/: ci.yml
Strategy Repo/fxlab_chan_next3_strategy_pack/: FX_SingleAsset_MeanReversion_H1.experiment_plan.json  FX_SingleAsset_MeanReversion_H1.search_space.json  FX_SingleAsset_MeanReversion_H1.strategy_ir.json  FX_TimeSeriesMomentum_Breakout_D1.experiment_plan.json  FX_TimeSeriesMomentum_Breakout_D1.search_space.json  FX_TimeSeriesMomentum_Breakout_D1.strategy_ir.json  FX_TurnOfMonth_USDSeasonality_D1.experiment_plan.json  FX_TurnOfMonth_USDSeasonality_D1.search_space.json  FX_TurnOfMonth_USDSeasonality_D1.strategy_ir.json
Strategy Repo/fxlab_kathy_lien_public_strategy_pack/: FX_DoubleBollinger_TrendZone.experiment_plan.json  FX_DoubleBollinger_TrendZone.search_space.json  FX_DoubleBollinger_TrendZone.strategy_ir.json  FX_MTF_DailyTrend_H1Pullback.experiment_plan.json  FX_MTF_DailyTrend_H1Pullback.search_space.json  FX_MTF_DailyTrend_H1Pullback.strategy_ir.json
User Spec/: 00_fxlab_v9_phase_overview.md  FXLab_Phase_1_workplan_v3.md  FXLab_Phase_2_workplan_v2_1.md  FXLab_Phase_3_workplan_v1_1.md  phase_1_platform_foundation_v1.md  phase_2_research_and_compiler_v1.md  phase_3_web_governance_and_exports_v1.md  phase_4_execution_and_live_operations_v1.md
User Spec/Algo Specfication and Examples/: experiment_plan.example.json  fxlab_strategy_spec_instruction.md  search_space.example.json  strategy_ir.example.json
_archived/: services_api_app.py.bak
config/keycloak/: fxlab-realm.json  setup-realm.sh
deploy/alertmanager/: alertmanager.yml
deploy/nginx/: Dockerfile  fxlab.conf
deploy/prometheus/: METRICS_CHECKLIST.md  README.md  alerts.yml  prometheus.yml
deploy/scripts/: INDEX.md  INSTALLATION.md  QUICKSTART.md  README-backup.md  backup-db.sh  crontab-examples.txt
deploy/systemd/: fxlab-backup-db.service  fxlab-backup-db.timer  fxlab.service
docs/: FXLab_Mobile_UX_Strategy.md  IDEMPOTENCY.md  SLO.md  e2e-test-plan.md  slo-definitions.md  slo-validation-report.md
docs/api/: ACCEPTANCE_PACK.md
docs/remediation/: 2026-04-15-minitux-install-failure.md  2026-04-15-remediation-plan-v2.md
docs/runbooks/: broker-failover.md  database-backup-restore.md  deployment-operations.md  disaster-recovery.md  incident-response.md  migration-rollback.md  point-in-time-recovery.md  reconciliation-procedures.md  secret-rotation.md  staging-to-production.md
docs/workplan-tracking/: .active_workplan  FXLab_Phase_1_workplan_v3.build-log.md  FXLab_Phase_1_workplan_v3.distilled.md  FXLab_Phase_1_workplan_v3.issues  FXLab_Phase_1_workplan_v3.lessons-learned  FXLab_Phase_1_workplan_v3.progress  FXLab_Phase_1_workplan_v3.write-journal.jsonl  FXLab_Phase_2_workplan_v2_1.build-log.md  FXLab_Phase_2_workplan_v2_1.distilled.md  FXLab_Phase_2_workplan_v2_1.issues  FXLab_Phase_2_workplan_v2_1.lessons-learned  FXLab_Phase_2_workplan_v2_1.progress  FXLab_Phase_2_workplan_v2_1.write-journal.jsonl  FXLab_Phase_3_M13_gap_fill.md  FXLab_Phase_3_workplan_v1_1.build-log.md  FXLab_Phase_3_workplan_v1_1.distilled.md  FXLab_Phase_3_workplan_v1_1.golden.json  FXLab_Phase_3_workplan_v1_1.issues  FXLab_Phase_3_workplan_v1_1.lessons-learned  FXLab_Phase_3_workplan_v1_1.lessons.json  FXLab_Phase_3_workplan_v1_1.press-counter.json  FXLab_Phase_3_workplan_v1_1.progress  FXLab_Phase_3_workplan_v1_1.write-journal.jsonl  FXLab_Phase_4_workplan_v1.md  (+14 more)
files/: build.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  .npmrc  Dockerfile  README.md  SENTRY_IMPLEMENTATION.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
libs/: __init__.py
migrations/: env.py
scripts/: _fingerprint.sh  _lib.sh  _stamps.sh  bootstrap.sh  healthcheck.sh  smoke_health_eval.py  start.sh  test-pg.sh  validate_env.py  validate_migrations.py
services/: __init__.py
tests/: __init__.py  conftest.py  test_api.py
(+1379 files in other folders)
