[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fxlab"
version = "0.1.0"
description = "FXLab Platform Foundation"
requires-python = ">=3.10"
dependencies = [
    # Phase 1 — platform foundation
    "fastapi==0.109.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "structlog==24.1.0",
    "python-ulid==2.2.0",
    # Auth — JWT and password hashing
    "python-jose[cryptography]>=3.3.0",  # JWT encoding/decoding (HS256, RS256)
    "PyJWT[crypto]>=2.8.0",               # JWT decoding with RSA (used by Keycloak validator)
    "bcrypt>=4.0.0",                      # password hashing for local accounts
    # HTTP — ASGI server and request parsing
    "uvicorn[standard]>=0.25.0",          # production ASGI server
    "python-multipart>=0.0.6",            # form data parsing for OAuth2 token endpoint
    # Phase 2 — research & strategy compiler
    "optuna>=3.5.0",       # hyperparameter optimisation sampler
    "numpy>=1.26.0",       # numerical operations across compiler/IR layers
    "polars>=0.20.0",      # bar-level computation (columnar, fast)
    "pyarrow>=14.0.0",     # parquet I/O for research artefacts
    # Build tooling
    "nodeenv>=1.9.0",      # manages Node.js/npm inside Python venv for frontend builds
    # Observability — OpenTelemetry distributed tracing
    "opentelemetry-api>=1.20.0",                  # tracer and span API
    "opentelemetry-sdk>=1.20.0",                  # TracerProvider, exporters, samplers
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",  # OTLP gRPC exporter for Jaeger/Tempo
]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
]

# pytest config lives in pytest.ini (single source of truth).
# A duplicate [tool.pytest.ini_options] block here was silently
# ignored by pytest (the older pytest.ini takes precedence) and
# the divergence was real: pyproject's version dropped
# --cov-config=.coveragerc (which carries the 80% fail_under gate)
# and the marker definitions (unit/integration/acceptance). Removed
# 2026-04-25 in Tranche M-prep #4.

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    ".archive",
    ".claude",
    "migrations/versions",
    "__pycache__",
    "node_modules",
    "build.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default args (FastAPI Depends pattern)
    "UP007",  # use X | Y for union (requires Python 3.10+ runtime)
    "UP017",  # use datetime.UTC alias (requires Python 3.11+ runtime)
    "UP042",  # str+Enum → StrEnum (requires Python 3.11+ runtime; codebase-wide pattern)
    "B904",   # raise from in except (pre-existing; fix incrementally)
    "B017",   # pytest.raises(Exception) in tests (intentional for frozen model tests)
    "SIM117",  # nested with → combined with (readability preference)
    "SIM102",  # nested if → combined if (readability preference)
    "E402",    # module-level import not at top (intentional in several modules)
    "F405",    # name may be undefined from star imports (__init__ re-exports)
    "UP035",   # deprecated typing imports (AsyncContextManager → contextlib)
    "SIM105",  # contextlib.suppress vs try/except/pass (readability preference)
    "UP046",   # PEP 695 Generic class syntax (requires Python 3.12+ runtime)
    "UP047",   # PEP 695 generic function syntax (requires Python 3.12+ runtime)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # assert statements OK in tests

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
exclude = [".claude", ".archive", "migrations"]
